@@ -4,11 +4,7 @@
  */
 package org.mina_lang.codegen.jvm.scopes;
 
-import org.eclipse.collections.api.map.ImmutableMap;
-import org.eclipse.collections.api.map.MutableMap;
-import org.eclipse.collections.api.tuple.Pair;
-import org.eclipse.collections.impl.factory.Maps;
-import org.eclipse.collections.impl.tuple.Tuples;
+import it.unimi.dsi.fastutil.Pair;
 import org.mina_lang.codegen.jvm.*;
 import org.mina_lang.common.Attributes;
 import org.mina_lang.common.Meta;
@@ -23,7 +19,12 @@ import org.objectweb.asm.ClassWriter;
 import org.objectweb.asm.Label;
 import org.objectweb.asm.commons.GeneratorAdapter;
 
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import static org.objectweb.asm.Opcodes.*;
 
@@ -31,27 +32,27 @@ public record TopLevelLetGenScope(
         GeneratorAdapter methodWriter,
         Label startLabel,
         Label endLabel,
-        MutableMap<String, Meta<Attributes>> values,
-        MutableMap<String, Meta<Attributes>> types,
-        MutableMap<ConstructorName, MutableMap<String, Meta<Attributes>>> fields,
-        ImmutableMap<Named, LocalVar> methodParams,
-        MutableMap<Named, LocalVar> localVars,
+        Map<String, Meta<Attributes>> values,
+        Map<String, Meta<Attributes>> types,
+        Map<ConstructorName, Map<String, Meta<Attributes>>> fields,
+        Map<Named, LocalVar> methodParams,
+        Map<Named, LocalVar> localVars,
         AtomicInteger nextLambdaId) implements LambdaLiftingScope {
 
     public TopLevelLetGenScope(
             GeneratorAdapter methodWriter,
             Label startLabel,
             Label endLabel,
-            ImmutableMap<Named, LocalVar> methodParams) {
+            Map<Named, LocalVar> methodParams) {
         this(
                 methodWriter,
                 startLabel,
                 endLabel,
-                Maps.mutable.empty(),
-                Maps.mutable.empty(),
-                Maps.mutable.empty(),
+                new HashMap<>(),
+                new HashMap<>(),
+                new HashMap<>(),
                 methodParams,
-                Maps.mutable.empty(),
+                new HashMap<>(),
                 new AtomicInteger(0));
     }
 
@@ -61,35 +62,37 @@ public record TopLevelLetGenScope(
         var methodWriter = Asm.methodWriter(
                 letFn.name(),
                 letFn.expr(),
-                letFn.valueParams().collect(Types::asmType),
+                letFn.valueParams().stream().map(Types::asmType).toList(),
                 JavaSignature.forMethod(letFn),
                 namespaceWriter);
 
         var startLabel = new Label();
         var endLabel = new Label();
 
-        var methodParams = letFn.valueParams().collectWithIndex((param, index) -> {
-            var paramName = Names.getName(param);
-            var paramMinaType = Types.getType(param);
-            var paramType = Types.asmType(paramMinaType);
-            var paramSignature = JavaSignature.forType(paramMinaType);
-            return Tuples.pair(
+        var methodParams = IntStream.range(0, letFn.valueParams().size())
+            .mapToObj(index -> {
+                var param = letFn.valueParams().get(index);
+                var paramName = Names.getName(param);
+                var paramMinaType = Types.getType(param);
+                var paramType = Types.asmType(paramMinaType);
+                var paramSignature = JavaSignature.forType(paramMinaType);
+                return Pair.of(
                     paramName,
                     new LocalVar(
-                            ACC_FINAL,
-                            index,
-                            param.name(),
-                            paramType.getDescriptor(),
-                            paramSignature,
-                            startLabel,
-                            endLabel));
-        }).toImmutableMap(Pair::getOne, Pair::getTwo);
+                        ACC_FINAL,
+                        index,
+                        param.name(),
+                        paramType.getDescriptor(),
+                        paramSignature,
+                        startLabel,
+                        endLabel));
+            }).collect(Collectors.toMap(Pair::first, Pair::second));
 
-        methodParams
-                .toSortedListBy(LocalVar::index)
-                .forEach(param -> {
-                    methodWriter.visitParameter(param.name(), param.access());
-                });
+        methodParams.values().stream()
+            .sorted(Comparator.comparingInt(LocalVar::index))
+            .forEach(param -> {
+                methodWriter.visitParameter(param.name(), param.access());
+            });
 
         methodWriter.visitCode();
         methodWriter.visitLabel(startLabel);
@@ -105,35 +108,36 @@ public record TopLevelLetGenScope(
         var methodWriter = Asm.methodWriter(
                 let.name(),
                 lambda.body(),
-                lambda.params().collect(Types::asmType),
+                lambda.params().stream().map(Types::asmType).toList(),
                 JavaSignature.forMethod(let),
                 namespaceWriter);
 
         var startLabel = new Label();
         var endLabel = new Label();
 
-        var methodParams = lambda.params().collectWithIndex((param, index) -> {
+        var methodParams = IntStream.range(0, lambda.params().size()).mapToObj(index -> {
+            var param = lambda.params().get(index);
             var paramName = Names.getName(param);
             var paramMinaType = Types.getType(param);
             var paramType = Types.asmType(paramMinaType);
             var paramSignature = JavaSignature.forType(paramMinaType);
-            return Tuples.pair(
-                    paramName,
-                    new LocalVar(
-                            ACC_FINAL,
-                            index,
-                            param.name(),
-                            paramType.getDescriptor(),
-                            paramSignature,
-                            startLabel,
-                            endLabel));
-        }).toImmutableMap(Pair::getOne, Pair::getTwo);
+            return Pair.of(
+                paramName,
+                new LocalVar(
+                    ACC_FINAL,
+                    index,
+                    param.name(),
+                    paramType.getDescriptor(),
+                    paramSignature,
+                    startLabel,
+                    endLabel));
+        }).collect(Collectors.toMap(Pair::first, Pair::second));
 
-        methodParams
-                .toSortedListBy(LocalVar::index)
-                .forEach(param -> {
-                    methodWriter.visitParameter(param.name(), param.access());
-                });
+        methodParams.values().stream()
+            .sorted(Comparator.comparingInt(LocalVar::index))
+            .forEach(param -> {
+                methodWriter.visitParameter(param.name(), param.access());
+            });
 
         methodWriter.visitCode();
         methodWriter.visitLabel(startLabel);
@@ -146,44 +150,44 @@ public record TopLevelLetGenScope(
             ClassWriter namespaceWriter) {
         var funType = (TypeApply) Types.getUnderlyingType(let);
 
-        var argMinaTypes = funType.typeArguments()
-                .take(funType.typeArguments().size() - 1);
+        var argMinaTypes = funType.typeArguments().subList(0, funType.typeArguments().size() - 1);
 
-        var returnType = Types.asmType(funType.typeArguments().getLast());
+        var returnType = Types.asmType(funType.typeArguments().get(funType.typeArguments().size() - 1));
 
         // Top-level eta-reduced functions are adapted into static methods
         var methodWriter = Asm.methodWriter(
                 ACC_PUBLIC + ACC_STATIC,
                 let.name(),
                 returnType,
-                argMinaTypes.collect(Types::asmType),
+                argMinaTypes.stream().map(Types::asmType).toList(),
                 JavaSignature.forMethod(let),
                 namespaceWriter);
 
         var startLabel = new Label();
         var endLabel = new Label();
 
-        var methodParams = argMinaTypes.collectWithIndex((paramMinaType, index) -> {
+        var methodParams = IntStream.range(0, argMinaTypes.size()).mapToObj(index -> {
+            var paramMinaType = argMinaTypes.get(index);
             var paramType = Types.asmType(paramMinaType);
             var paramSignature = JavaSignature.forType(paramMinaType);
-            return Tuples.pair(
-                    (Named) new LocalName("arg" + index, 0),
-                    new LocalVar(
-                            // These params are created to adapt the eta-reduced function
-                            ACC_FINAL + ACC_SYNTHETIC,
-                            index,
-                            "arg" + index,
-                            paramType.getDescriptor(),
-                            paramSignature,
-                            startLabel,
-                            endLabel));
-        }).toImmutableMap(Pair::getOne, Pair::getTwo);
+            return Pair.of(
+                (Named) new LocalName("arg" + index, 0),
+                new LocalVar(
+                    // These params are created to adapt the eta-reduced function
+                    ACC_FINAL + ACC_SYNTHETIC,
+                    index,
+                    "arg" + index,
+                    paramType.getDescriptor(),
+                    paramSignature,
+                    startLabel,
+                    endLabel));
+        }).collect(Collectors.toMap(Pair::first, Pair::second));
 
-        methodParams
-                .toSortedListBy(LocalVar::index)
-                .forEach(param -> {
-                    methodWriter.visitParameter(param.name(), param.access());
-                });
+        methodParams.values().stream()
+            .sorted(Comparator.comparingInt(LocalVar::index))
+            .forEach(param -> {
+                methodWriter.visitParameter(param.name(), param.access());
+            });
 
         methodWriter.visitCode();
         methodWriter.visitLabel(startLabel);
